--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,15 @@
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="hello_world">Hello world!</string>
 
+
+
+    <string name="lorem_ipsum">fnesinfoeskdnokielsnfoiefnoiesnfieosnfiewnveiokfvewoifnoiewfnewn
+         fkwaqnfokqwanfokqwnfpoqwnfpwq
+        f jwq fokiqnfpiqwnfponfẃq
+        fnkjqwnfponqwfpownfpqnfpofmowq
+         fkwqnfpoqnfpownfpqnfotfw
+        nfopwnqfpoqnwfpownfponfopn
+        fwqnpfnqwnfopwnfqwnfowfw
+        fniwfnpqwfpownfponwqp!</string>
+
 </resources>
